--- a/index.html
+++ b/index.html
@@ -14,6 +14,30 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <meta name="description" content="We are the No.1 transport and logistics company in Nigeria. Book with us now and Let us take you on a journey through comfort and convenience. ">
 	
+	<meta name="robots" content="index,follow">
+
+<meta itemprop="image" content="https://sammottransport.com/SAMM.png">
+
+  <!-- Facebook Meta Tags -->
+  <meta property="og:site_name" content="Sammot Transport" >
+  <meta property="og:url" content="https://sammottransport.com/">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Sammot Transport | Transport & Logistics services in Nigeria">
+  <meta property="og:description" content="We are the No.1 transport and logistics company in Nigeria. Book with us now and Let us take you on a journey through comfort and convenience. ">
+  <meta property="og:image" content="https://sammottransport.com/SAMM.png">
+
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta property="twitter:domain" content="Sammottransport.com">
+  <meta property="twitter:url" content="https://Sammottransport.com/">
+  <meta name="twitter:title" content="Sammot Transport | Transport & Logistics services in Nigeria">
+  <meta name="twitter:description" content="We are the No.1 transport and logistics company in Nigeria. Book with us now and Let us take you on a journey through comfort and convenience. ">
+  <meta name="twitter:image" content="https://sammottransport.com/SAMM.png">
+
+        
+
+
+
 	<title>Sammot Transport | Transport & Logistics services in Nigeria</title>
 	
 	
