--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	
 	<meta name="robots" content="index,follow">
 
-<meta itemprop="image" content="https://sammottransport.com/SAMM.png">
+<meta itemprop="image" content="https://sammottransport.com/SAMM2.png">
 
   <!-- Facebook Meta Tags -->
   <meta property="og:site_name" content="Sammot Transport" >
@@ -24,7 +24,7 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="Sammot Transport | Transport & Logistics services in Nigeria">
   <meta property="og:description" content="We are the No.1 transport and logistics company in Nigeria. Book with us now and Let us take you on a journey through comfort and convenience. ">
-  <meta property="og:image" content="https://sammottransport.com/SAMM.png">
+  <meta property="og:image" content="https://sammottransport.com/SAMM2.png">
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
@@ -32,7 +32,7 @@
   <meta property="twitter:url" content="https://Sammottransport.com/">
   <meta name="twitter:title" content="Sammot Transport | Transport & Logistics services in Nigeria">
   <meta name="twitter:description" content="We are the No.1 transport and logistics company in Nigeria. Book with us now and Let us take you on a journey through comfort and convenience. ">
-  <meta name="twitter:image" content="https://sammottransport.com/SAMM.png">
+  <meta name="twitter:image" content="https://sammottransport.com/SAMM2.png">
 
         
 
