--- a/car-rent-and-fleet.html
+++ b/car-rent-and-fleet.html
@@ -626,11 +626,10 @@ textarea
 					<h5>About Us</h5>
 					<div class="title-block6"></div>
 					<p style="font-size: 12px">
-				    Sammot Transport  Service was established in 2014. We go beyond just providing you with logistics services, by ensuring that we manage your needs professionally and efficiently. We provide uniquely designed and tailored logistic solutions and guarantee you the best customer experience.
-				</p>
+				    Sammot Transportation Service was founded in 2015. We go above and beyond just providing logistical services by ensuring that your demands are managed professionally and effectively. We deliver precisely planned and personalized logistic solutions while ensuring the greatest client experience possible.</p>
+				    <p style="font-size: 12px">
 
-				<p style="font-size: 12px">
-				    Our aim is to be a significant player in the Nigerian transportation and logistics industry by being pro-active to the ever-changing and increasing demands of clientele, and providing cost-effective solutions.
+Our goal is to be a key participant in the Nigerian transportation and logistics business by being proactive in responding to our clients' ever-changing and expanding demands and offering cost-effective solutions.
 				</p>
 				<!-- END .one-half -->
 				</div>
