--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta property="twitter:domain" content="Sammottransport.com">
+  <meta property="twitter:domain" content="Sammot Transport">
   <meta property="twitter:url" content="https://Sammottransport.com/">
   <meta name="twitter:title" content="Sammot Transport | Transport & Logistics services in Nigeria">
   <meta name="twitter:description" content="We are the No.1 transport and logistics company in Nigeria. Book with us now and Let us take you on a journey through comfort and convenience. ">
@@ -1000,11 +1000,10 @@ I would gladly tell anyone about Sammot Transport wonderful services.<span class
 				<h3>About Us</h3>
 				<div class="title-block4"></div>
 				<p>
-				    Sammot Transport Service was established in 2014. We go beyond just providing you with logistics services, by ensuring that we manage your needs professionally and efficiently. We provide uniquely designed and tailored logistic solutions and guarantee you the best customer experience.
-				</p>
+				   Sammot Transportation Service was founded in 2014. We go above and beyond just providing logistical services by ensuring that your demands are managed professionally and effectively. We deliver precisely planned and personalized logistic solutions while ensuring the greatest client experience possible.</p>
+				   <p>
 
-				<p>
-				    Our aim is to be a significant player in the Nigerian transportation and logistics industry by being pro-active to the ever-changing and increasing demands of clientele, and providing cost-effective solutions.
+Our goal is to be a key participant in the Nigerian transportation and logistics business by being proactive in responding to our clients' ever-changing and expanding demands and offering cost-effective solutions.
 				</p>
 				<a href="about.html" class="button0">Learn More</a>
 
@@ -1035,12 +1034,12 @@ I would gladly tell anyone about Sammot Transport wonderful services.<span class
 					<h5>About Us</h5>
 					<div class="title-block6"></div>
 					<p style="font-size: 12px">
-				    Sammot Transport Service was established in 2014. We go beyond just providing you with logistics services, by ensuring that we manage your needs professionally and efficiently. We provide uniquely designed and tailored logistic solutions and guarantee you the best customer experience.
+				    Sammot Transportation Service was founded in 2015. We go above and beyond just providing logistical services by ensuring that your demands are managed professionally and effectively. We deliver precisely planned and personalized logistic solutions while ensuring the greatest client experience possible.</p>
+				    <p style="font-size: 12px">
+
+Our goal is to be a key participant in the Nigerian transportation and logistics business by being proactive in responding to our clients' ever-changing and expanding demands and offering cost-effective solutions.
 				</p>
 
-				<p style="font-size: 12px">
-				    Our aim is to be a significant player in the Nigerian transportation and logistics industry by being pro-active to the ever-changing and increasing demands of clientele, and providing cost-effective solutions.
-				</p>
 				<!-- END .one-half -->
 				</div>
 
