--- a/about.html
+++ b/about.html
@@ -664,9 +664,9 @@ I would gladly tell anyone about Sammot Transport wonderful services.<span class
 						<div class="title-block7"></div>
 					
 						<p>
-        				    In 2014, Sammot Transport Service was founded. We go above and above by making sure that we manage your demands effectively and professionally, in addition to just offering you logistics services. We assure you the greatest client experience while offering logistical solutions that are specially created and adapted.</p>
-
-<p>Our goal is to become a prominent participant in the Nigerian transportation and logistics sector by anticipating the ever-evolving and expanding clientele's needs and offering affordable solutions.
+        				   Sammot Transportation Service was founded in 2015. We go above and beyond just providing logistical services by ensuring that your demands are managed professionally and effectively. We deliver precisely planned and personalized logistic solutions while ensuring the greatest client experience possible.</p>
+				  
+Our goal is to be a key participant in the Nigerian transportation and logistics business by being proactive in responding to our clients' ever-changing and expanding demands and offering cost-effective solutions.
 					   </p>
 					<!-- END .qns-one-half -->
 					</div>
@@ -736,11 +736,10 @@ I would gladly tell anyone about Sammot Transport wonderful services.<span class
 					<h5>About Us</h5>
 					<div class="title-block6"></div>
 					<p style="font-size: 12px">
-				    Sammot Transport Transport Service was established in 2014. We go beyond just providing you with logistics services, by ensuring that we manage your needs professionally and efficiently. We provide uniquely designed and tailored logistic solutions and guarantee you the best customer experience.
-				</p>
+				    Sammot Transportation Service was founded in 2015. We go above and beyond just providing logistical services by ensuring that your demands are managed professionally and effectively. We deliver precisely planned and personalized logistic solutions while ensuring the greatest client experience possible.</p>
+				    <p style="font-size: 12px">
 
-				<p style="font-size: 12px">
-				    Our aim is to be a significant player in the Nigerian transportation and logistics industry by being pro-active to the ever-changing and increasing demands of clientele, and providing cost-effective solutions.
+Our goal is to be a key participant in the Nigerian transportation and logistics business by being proactive in responding to our clients' ever-changing and expanding demands and offering cost-effective solutions.
 				</p>
 				<!-- END .one-half -->
 				</div>
