--- a/index.html
+++ b/index.html
@@ -63,10 +63,17 @@
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet"> 
 	<link rel="stylesheet" href="assets/fastselect/fastselect.css">
 	
+
+	<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+<link rel="manifest" href="site.webmanifest">
+
+
 	<script src="ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 	
 	<!-- Favicon -->
-	<link rel="icon" type="image/png" href="images/favicon.png" />
+	
 <script>
     $(document).ready(function(){
         var _menu = "homepage";
@@ -414,6 +421,7 @@ textarea
 	background: rgba(43,222,63,0.2);
 }
 </style>
+
 <!-- END head -->
 </head>
 
